--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     :root { --primary:#d4a373; --dark:#2c1a0d; --light:#faf7f2; --accent:#e07a5f; }
     * { margin:0; padding:0; box-sizing:border-box; }
     body { font-family:'Open Sans',sans-serif; background:var(--light); color:var(--dark); min-height:100vh; display:flex; flex-direction:column; }
-    header { background:url('https://i.postimg.cc/9Fq9wm9c/super-pekarna.png') center/cover; height:50vh; display:flex; align-items:center; justify-content:center; text-align:center; color:white; }
+    header { background:url('super-pekarna.png') center/cover; height:50vh; display:flex; align-items:center; justify-content:center; text-align:center; color:white; }
     .logo { font-family:'Playfair Display',serif; font-size:5.5rem; text-shadow:4px 4px 15px rgba(0,0,0,0.8); display:none; }
     main { flex:1; padding:60px 20px; max-width:1300px; margin:0 auto; width:100%; }
     h2 { text-align:center; font-family:'Playfair Display',serif; font-size:3.2rem; margin-bottom:2rem; color:var(--dark); }
@@ -96,13 +96,13 @@
   </footer>
 
   <script>
-    const defaultImage = 'https://i.postimg.cc/0jYTmNBX/neco-se-nepovedlo.png';
+    const defaultImage = 'neco-se-nepovedlo.png';
 
     const products = [
       {
         name: "Perníčky",
         description: "3. Pokus",
-        image: "https://i.postimg.cc/FzCtr6dJ/pernicky.webp",
+        image: "pernicky.webp",
         rating: 5,
         ingredients: "Mouka, Cukr, Vajíčka, Perníčkové koření, Kakao, Mléko, Kypřící prášek",
         created: "2025-11-26"
@@ -110,7 +110,7 @@
      {
         name: "Muffiny",
         description: "2. Pokus, ale obrázek je z 1. pokusu",
-        image: "https://i.postimg.cc/0NYLMjK2/muffiny.webp",
+        image: "muffiny.webp",
         rating: 4,
         ingredients: "Mouka, Cukr, Vajíčka, Čokoláda, Kakao",
         created: "2025-11-10"
@@ -118,7 +118,7 @@
       {
         name: "Pusinky",
         description: "",
-        image: "https://i.postimg.cc/wT6JSjpK/pusinky.webp",
+        image: "pusinky.webp",
         rating: 3,
         ingredients: "Bílek z vajíčka, Cukr",
         created: "Neznámé"
@@ -126,7 +126,7 @@
      {
         name: "Jablečný koláč",
         description: "",
-        image: "https://i.postimg.cc/wvwHM274/jablecny-kolac.webp",
+        image: "jablecny-kolac.webp",
         rating: 2,
         ingredients: "Mouka, Vajíčka, Cukr, Jablka a jiné ovoce",
         created: "Neznámé"
@@ -142,7 +142,7 @@
       {
         name: "Švestkový koláč",
         description: "",
-        image: "https://i.postimg.cc/X7RWrp7h/svestkovy-kolac.webp",
+        image: "svestkovy-kolac.webp",
         rating: 3,
         ingredients: "Mouka, Vajíčka, Cukr, Švestky a jiné ovoce",
         created: "Neznámé"
@@ -150,7 +150,7 @@
       {
         name: "M&M´s Chléb",
         description: "",
-        image: "https://i.postimg.cc/MZhRpmVx/mams-chleb.webp",
+        image: "mams-chleb.webp",
         rating: 0,
         ingredients: "Mouka, Vajíčka, Cukr, Bonbóny M&M´s",
         created: "Neznámé"
