--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
      {
         name: "Jablečný koláč",
         description: "",
-        image: "jablecny-kolac.webp",
+        image: "jablecny_kolac.webp",
         rating: 2,
         ingredients: "Mouka, Vajíčka, Cukr, Jablka a jiné ovoce",
         created: "Neznámé"
@@ -142,7 +142,7 @@
       {
         name: "Švestkový koláč",
         description: "",
-        image: "svestkovy-kolac.webp",
+        image: "svestkovy_kolac.webp",
         rating: 3,
         ingredients: "Mouka, Vajíčka, Cukr, Švestky a jiné ovoce",
         created: "Neznámé"
@@ -150,7 +150,7 @@
       {
         name: "M&M´s Chléb",
         description: "",
-        image: "mams-chleb.webp",
+        image: "mams_chleb.webp",
         rating: 0,
         ingredients: "Mouka, Vajíčka, Cukr, Bonbóny M&M´s",
         created: "Neznámé"
