--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       {
         name: "Tyramisu",
         description: "2. Pokus",
-        image: "",
+        image: "neco_se_nepovedlo.png",
         rating: 2,
         ingredients: "Mléko, Tvaroh, piškoty, kakao",
         created: "Neznámé"
