--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </footer>
 
   <script>
-    const defaultImage = 'neco-se-nepovedlo.png';
+    const defaultImage = 'neco_se_nepovedlo.png';
 
     const products = [
       {
@@ -134,7 +134,7 @@
       {
         name: "Tyramisu",
         description: "2. Pokus",
-        image: "neco_se_nepovedlo.png",
+        image: "",
         rating: 2,
         ingredients: "Mléko, Tvaroh, piškoty, kakao",
         created: "Neznámé"
