--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
     * { margin:0; padding:0; box-sizing:border-box; }
     body { font-family:'Open Sans',sans-serif; background:var(--light); color:var(--dark); min-height:100vh; display:flex; flex-direction:column; }
     
-    header { background:url('https://i.postimg.cc/9Fq9wm9c/super-pekarna.png') center/cover; height:40vh; display:flex; align-items:center; justify-content:center; text-align:center; color:white; }
+    header { background:url('super-pekarna.png') center/cover; height:40vh; display:flex; align-items:center; justify-content:center; text-align:center; color:white; }
     .logo { font-family:'Playfair Display',serif; font-size:4rem; text-shadow:4px 4px 15px rgba(0,0,0,0.8); display:none; }
     
     main { flex:1; padding:60px 20px; max-width:1300px; margin:0 auto; width:100%; }
