--- a/admin.html
+++ b/admin.html
@@ -131,10 +131,9 @@
         errorMsg.style.display = "block";
       }
     }
-
-    async function loadIdeasFromFile() {
-      try {
-        const res = await fetch("/api/update-ideas");
+   async function loadIdeasFromFile() {
+     try {
+       const res = await fetch("/api/get-ideas");  // Změněno z /api/update-ideas
         console.log('Response status:', res.status);
         console.log('Response headers:', res.headers.get('content-type'));
         
