--- a/admin.html
+++ b/admin.html
@@ -133,7 +133,7 @@
     }
    async function loadIdeasFromFile() {
      try {
-       const res = await fetch("/api/get-ideas");  // Změněno z /api/update-ideas
+       const res = await fetch("/api/get-ideas");  // Místo /api/update-ideas
         console.log('Response status:', res.status);
         console.log('Response headers:', res.headers.get('content-type'));
         
