--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
 
     const products = [
       {
+        name: "Rafaelo",
+        description: "",
+        image: "",
+        rating: 5,
+        ingredients: "Mouka, Cukr, Kondenzované mléko, Strouhaný kokos, Mandle",
+        created: "2025-11-28"
+      },
+      {
         name: "Perníčky",
         description: "3. Pokus",
         image: "pernicky.webp",
