Change Rafaelo image from PNG to JPG format

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       {
         name: "Rafaelo",
         description: "",
-        image: "rafaelo.png",
+        image: "rafaelo.jpg",
         rating: 5,
         ingredients: "Mouka, Cukr, Kondenzované mléko, Strouhaný kokos, Mandle",
         created: "2025-11-28"
