Update contact section text and link

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
     <h2 class="contact-title">Máš nápad?</h2>
     <div class="contact-section">
-      <p style="margin-bottom: 25px; font-size: 1.1rem; color: var(--dark);">Sdílej s námi své nápady na nové pečivo!</p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLScbPsW00LGvBiAQKL9O_VjiR15jby58UTqIkpDt3sW4rNRbtA/viewform?usp=sharing&ouid=101182095751355125326" target="_blank" rel="noopener noreferrer" class="submit-btn">Přejít na formulář s nápady</a>
+      <p style="margin-bottom: 25px; font-size: 1.1rem; color: var(--dark);">Sdílej s námi své nápady!</p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScbPsW00LGvBiAQKL9O_VjiR15jby58UTqIkpDt3sW4rNRbtA/viewform?usp=sharing&ouid=101182095751355125326" target="_blank" rel="noopener noreferrer" class="submit-btn">Přejít na formulář</a>
     </div>
   </main>
 
