--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
   </header>
 
   <main>
-    <h2>Náš Protokol</h2>
-    
-    <div id="productList" class="products"></div>
-
-    <h2 class="contact-title">Máš nápad?</h2>
+    <h2 class="contact-title" style="margin-top: 0;">Máš nápad?</h2>
     <div class="contact-section">
       <p style="margin-bottom: 25px; font-size: 1.1rem; color: var(--dark);">Sdílej s námi své nápady!</p>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScbPsW00LGvBiAQKL9O_VjiR15jby58UTqIkpDt3sW4rNRbtA/viewform?usp=sharing&ouid=101182095751355125326" target="_blank" rel="noopener noreferrer" class="submit-btn">Přejít na formulář</a>
     </div>
+
+    <h2 style="margin-top: 80px;">Náš Protokol</h2>
+    
+    <div id="productList" class="products"></div>
   </main>
 
   <footer>
