--- a/admin.html
+++ b/admin.html
@@ -36,7 +36,7 @@
     .idea-date { font-size:0.85rem; color:#999; margin-top:10px; }
     .empty-ideas { text-align:center; padding:30px; color:#999; }
 
-    .show-more-btn { width:100%; max-width:600px; margin:20px auto; padding:14px; background:var(--primary); color:white; border:none; border-radius:10px; font-size:1rem; font-weight:bold; cursor:pointer; transition:background 0.3s; display:block; }
+    .show-more-btn { width:auto; min-width:200px; margin:20px auto; padding:14px 30px; background:var(--primary); color:white; border:none; border-radius:10px; font-size:1rem; font-weight:bold; cursor:pointer; transition:background 0.3s; }
     .show-more-btn:hover { background:#c28b55; }
     .older-ideas { display:none; margin-top:20px; }
     .older-ideas.show { display:block; }
@@ -62,7 +62,9 @@
   <div id="ideasSection" class="ideas-section">
     <h2>Nové Nápady</h2>
     <div id="pendingTab"></div>
-    <button id="showMoreBtn" class="show-more-btn" onclick="toggleOlderIdeas()" style="display:none;">Zobrazit více</button>
+    <div style="text-align:center;">
+      <button id="showMoreBtn" class="show-more-btn" onclick="toggleOlderIdeas()" style="display:none;">Zobrazit více</button>
+    </div>
     <div id="olderIdeas" class="older-ideas"></div>
   </div>
 
@@ -159,7 +161,7 @@
       const olderItems = items.slice(5);
       if (olderItems.length > 0) {
         olderList.innerHTML = olderItems.map(row => createIdeaHTML(row)).join("");
-        showMoreBtn.style.display = "block";
+        showMoreBtn.style.display = "inline-block";
       } else {
         showMoreBtn.style.display = "none";
       }
