--- a/admin.html
+++ b/admin.html
@@ -121,10 +121,12 @@
 
   function openModal() {
     document.getElementById("olderIdeasModal").classList.add("show");
+    document.body.style.overflow = "hidden";
   }
 
   function closeModal() {
     document.getElementById("olderIdeasModal").classList.remove("show");
+    document.body.style.overflow = "auto";
   }
 
   function closeModalOnOutside(event) {
