--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <div id="announcement" class="announcement" style="border-color: #d4a373; background: rgba(255, 245, 230, 0.85);">
     <button class="close-btn" onclick="document.getElementById('announcement').classList.add('hidden');" aria-label="Zavřít oznámení">✕</button>
-    🎉 <strong>Novinka:</strong> Nový web je tu!
+     <strong>Novinka:</strong> Nový web je tu!
   </div>
 
   <header>
