--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       {
         name: "Perníčky",
         description: "3. Pokus",
-        image: "pernicky.webp",
+        image: "",
         rating: 5,
         ingredients: "Mouka, Cukr, Vajíčka, Perníčkové koření, Kakao, Mléko, Kypřící prášek",
         created: "2025-11-26"
