--- a/beta.html
+++ b/beta.html
@@ -79,9 +79,11 @@
       right: 0;
       bottom: 0;
       background-image: url('super-pekarna.png');
-      background-position: center;
+      background-position: center center;
       background-repeat: no-repeat;
-      background-size: 100% 100%;
+      background-size: cover;
+      width: 100%;
+      height: 100%;
       opacity: 1;
       z-index: 0;
     }
@@ -150,7 +152,7 @@
     
     /* Announcement Banner */
     .announcement {
-      position: fixed;
+      position: absolute;
       bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
@@ -158,7 +160,7 @@
       backdrop-filter: blur(20px);
       border-radius: 50px;
       padding: 12px 60px 12px 24px;
-      z-index: 1000;
+      z-index: 2;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       border: 1px solid rgba(255, 255, 255, 0.3);
       max-width: 90%;
@@ -473,7 +475,6 @@
     .footer-text {
       opacity: 0.8;
       font-size: 0.95rem;
-      display: none;
     }
     
     /* Theme Toggle */
@@ -539,7 +540,7 @@
       background: rgba(255, 255, 255, 0.05);
       backdrop-filter: blur(20px);
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 16px 40px;
+      padding: 20px 40px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -714,6 +715,10 @@
 
   <!-- Hero Section -->
   <section class="hero">
+    <div id="announcement" class="announcement">
+      <button class="close-btn" onclick="this.parentElement.classList.add('hidden')" aria-label="Zavřít">✕</button>
+      <strong>✨ Novinka:</strong> Nový moderní web je tu!
+    </div>
     <div class="hero-content">
       <h1 class="hero-title">Super Pekárna</h1>
       <p class="hero-subtitle">Vytvořeno s láskou a moukou</p>
@@ -832,13 +837,17 @@
     function setTheme(theme) {
       if (theme === 'light') {
         document.body.classList.add('light-mode');
-        document.getElementById('lightBtn').classList.add('active');
-        document.getElementById('darkBtn').classList.remove('active');
+        document.getElementById('lightBtn')?.classList.add('active');
+        document.getElementById('darkBtn')?.classList.remove('active');
+        document.getElementById('navLightBtn').classList.add('active');
+        document.getElementById('navDarkBtn').classList.remove('active');
         localStorage.setItem('theme', 'light');
       } else {
         document.body.classList.remove('light-mode');
-        document.getElementById('darkBtn').classList.add('active');
-        document.getElementById('lightBtn').classList.remove('active');
+        document.getElementById('darkBtn')?.classList.add('active');
+        document.getElementById('lightBtn')?.classList.remove('active');
+        document.getElementById('navDarkBtn').classList.add('active');
+        document.getElementById('navLightBtn').classList.remove('active');
         localStorage.setItem('theme', 'dark');
       }
     }
