--- a/beta.html
+++ b/beta.html
@@ -689,7 +689,7 @@
 <body>
   <div id="announcement" class="announcement">
     <button class="close-btn" onclick="this.parentElement.classList.add('hidden')" aria-label="Zavřít">✕</button>
-    <strong>✨ Novinka:</strong> Nový moderní web je tu!
+    <strong>✨ Novinka:</strong> Nový disajn webu je tu!
   </div>
 
   <div class="theme-toggle">
@@ -716,13 +716,13 @@
 
   <section id="ideas">
     <h2 class="section-title">Máš nápad?</h2>
-    <p class="section-subtitle" style="display: none;">Sdílej s námi své nápady a inspirace</p>
+    <p class="section-subtitle" style="display: none;">Sdílej s námi své nápady!</p>
     
     <div class="contact-card">
       <div class="contact-icon">💡</div>
       <p class="contact-text">
-        Máš skvělý nápad na nové pečivo? Chceš s námi sdílet své tipy a triky?<br>
-        Budeme rádi za každý tvůj návrh!
+        Máš nápad na novou špakoládu? Máš nápad na úpravu webu?<br>
+        Napiš nám kliknutím na tlačítko níže!
       </p>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScbPsW00LGvBiAQKL9O_VjiR15jby58UTqIkpDt3sW4rNRbtA/viewform?usp=sharing&ouid=101182095751355125326" 
          target="_blank" 
@@ -735,12 +735,11 @@
 
   <section id="products">
     <h2 class="section-title">Náš Protokol</h2>
-    <p class="section-subtitle" style="display: none;">Objevte naše pečené speciality</p>
+    <p class="section-subtitle" style="display: none;">To, co jsme v minulosti vařili</p>
     
     <div id="productList" class="products-grid"></div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="footer-content">
       <div class="footer-logo">Super Pekárna</div>
@@ -788,7 +787,7 @@
         name: "Jablečný koláč",
         description: "",
         image: "jablecny_kolac.webp",
-        rating: 2,
+        rating: 3,
         ingredients: "Mouka, Vajíčka, Cukr, Jablka a jiné ovoce",
         created: "Neznámé"
       },
