Update announcement and contact text in beta.html

--- a/beta.html
+++ b/beta.html
@@ -704,7 +704,7 @@
   <section class="hero">
     <div id="announcement" class="announcement">
       <button class="close-btn" onclick="this.parentElement.classList.add('hidden')" aria-label="Zavřít">✕</button>
-      <strong>✨ Novinka:</strong> Nový moderní web je tu!
+      <strong>✨ Novinka:</strong> Nový dizajn webu je tu!
     </div>
     <div class="hero-content">
       <h1 class="hero-title">Super Pekárna</h1>
@@ -721,7 +721,7 @@
     <div class="contact-card">
       <div class="contact-icon">💡</div>
       <p class="contact-text">
-        Máš nápad na novou špakoládu? Máš nápad na úpravu webu?<br>
+        Máš nápad na novou šmakoládu? Máš nápad na úpravu webu?<br>
         Napiš nám kliknutím na tlačítko níže!
       </p>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLScbPsW00LGvBiAQKL9O_VjiR15jby58UTqIkpDt3sW4rNRbtA/viewform?usp=sharing&ouid=101182095751355125326" 
