--- a/beta.html
+++ b/beta.html
@@ -440,7 +440,7 @@
     }
     
     .product-date::before {
-      content: '📅';
+      content: '<i class="fa-solid fa-calendar"></i>';
     }
     
     footer {
