Change calendar icon to emoji in product-date

--- a/beta.html
+++ b/beta.html
@@ -440,7 +440,7 @@
     }
     
     .product-date::before {
-      content: 'ikony/calendar-solid-full.svg';
+      content: '📅';
     }
     
     footer {
